--- a/css/form.css
+++ b/css/form.css
@@ -47,7 +47,7 @@ div.form select
 
 div.form fieldset
 {
-	border: 1px solid #DDD;
+	border: 1px solid #dbd802;
 	padding: 10px;
 	margin: 0 0 10px 0;
     -moz-border-radius:7px;
@@ -69,7 +69,7 @@ div.form .hint
 {
 	margin: 0;
 	padding: 0;
-	color: #999;
+	color: #babf2c;
 }
 
 div.form .note
@@ -117,7 +117,7 @@ div.form .errorSummary
 	border: 2px solid #C00;
 	padding: 7px 7px 12px 7px;
 	margin: 0 0 20px 0;
-	background: #FEE;
+	background: #eee000;
 	font-size: 0.9em;
 }
 
