--- a/css/ie.css
+++ b/css/ie.css
@@ -27,7 +27,7 @@ fieldset {padding-top:0;}
 legend {margin-top:-0.2em;margin-bottom:1em;margin-left:-0.5em;}
 textarea {overflow:auto;}
 label {vertical-align:middle;position:relative;top:-0.25em;}
-input.text, input.title, textarea {background-color:#fff;border:1px solid #bbb;}
+input.text, input.title, textarea {background-color:#f9ec1b;border:1px solid #bbb;}
 input.text:focus, input.title:focus {border-color:#666;}
 input.text, input.title, textarea, select {margin:0.5em 0;}
 input.checkbox, input.radio {position:relative;top:.25em;}
