--- a/css/screen.css
+++ b/css/screen.css
@@ -26,7 +26,7 @@ a img {border:none;}
 
 /* typography.css */
 html {font-size:100.01%;}
-body {font-size:75%;color:#222;background:#fff;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
+body {font-size:75%;color:#222;background:#ffea00;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
 h1, h2, h3, h4, h5, h6 {font-weight:normal;color:#111;}
 h1 {font-size:2em;line-height:1;margin-bottom:0.5em;}
 h2 {font-size:1.6em;margin-bottom:0.75em;}
@@ -40,15 +40,15 @@ p {margin:0 0 1.5em;}
 p .left {margin:1.5em 1.5em 1.5em 0;padding:0;}
 .right {float:right !important;}
 p .right {margin:1.5em 0 1.5em 1.5em;padding:0;}
-a:focus, a:hover {color:#09f;}
-a {color:#06c;text-decoration:underline;}
-blockquote {margin:1.5em;color:#666;font-style:italic;}
+a:focus, a:hover {color:#2d009f;}
+a {color:#6c6800;text-decoration:underline;}
+blockquote {margin:1.5em;color:#746e0b;font-style:italic;}
 strong, dfn {font-weight:bold;}
 em, dfn {font-style:italic;}
 sup, sub {line-height:0;}
-abbr, acronym {border-bottom:1px dotted #666;}
+abbr, acronym {border-bottom:1px dotted #746e0b;}
 address {margin:0 0 1.5em;font-style:italic;}
-del {color:#666;}
+del {color:#746e0b;}
 pre {margin:1.5em 0;white-space:pre;}
 pre, code, tt {font:1em 'andale mono', 'lucida console', monospace;line-height:1.5;}
 li ul, li ol {margin:0;}
@@ -60,14 +60,14 @@ dl dt {font-weight:bold;}
 dd {margin-left:1.5em;}
 table {margin-bottom:1.4em;width:100%;}
 th {font-weight:bold;}
-thead th {background:#c3d9ff;}
+thead th {background:#faf5b8;}
 th, td, caption {padding:4px 10px 4px 5px;}
 tfoot {font-style:italic;}
-caption {background:#eee;}
+caption {background:#ebcd06;}
 .small {font-size:.8em;margin-bottom:1.875em;line-height:1.875em;}
 .large {font-size:1.2em;line-height:2.5em;margin-bottom:1.25em;}
 .hide {display:none;}
-.quiet {color:#666;}
+.quiet {color:#665400;}
 .loud {color:#000;}
 .highlight {background:#ff0;}
 .added {background:#060;color:#fff;}
@@ -176,8 +176,8 @@ input.span-24, textarea.span-24 {width:938px;}
 .prepend-21 {padding-left:840px;}
 .prepend-22 {padding-left:880px;}
 .prepend-23 {padding-left:920px;}
-.border {padding-right:4px;margin-right:5px;border-right:1px solid #ddd;}
-.colborder {padding-right:24px;margin-right:25px;border-right:1px solid #ddd;}
+.border {padding-right:4px;margin-right:5px;border-right:1px solid #ddb100;}
+.colborder {padding-right:24px;margin-right:25px;border-right:1px solid #ddb100;}
 .pull-1 {margin-left:-40px;}
 .pull-2 {margin-left:-80px;}
 .pull-3 {margin-left:-120px;}
@@ -230,8 +230,8 @@ input.span-24, textarea.span-24 {width:938px;}
 .push-1, .push-2, .push-3, .push-4, .push-5, .push-6, .push-7, .push-8, .push-9, .push-10, .push-11, .push-12, .push-13, .push-14, .push-15, .push-16, .push-17, .push-18, .push-19, .push-20, .push-21, .push-22, .push-23, .push-24 {float:left;position:relative;}
 div.prepend-top, .prepend-top {margin-top:1.5em;}
 div.append-bottom, .append-bottom {margin-bottom:1.5em;}
-.box {padding:1.5em;margin-bottom:1.5em;background:#e5eCf9;}
-hr {background:#ddd;color:#ddd;clear:both;float:none;width:100%;height:1px;margin:0 0 17px;border:none;}
+.box {padding:1.5em;margin-bottom:1.5em;background:#f1ec71;}
+hr {background:#ddb100;color:#ddb100;clear:both;float:none;width:100%;height:1px;margin:0 0 17px;border:none;}
 hr.space {background:#fff;color:#fff;visibility:hidden;}
 .clearfix:after, .container:after {content:"\0020";display:block;height:0;clear:both;visibility:hidden;overflow:hidden;}
 .clearfix, .container {display:block;}
