--- a/css/form.css
+++ b/css/form.css
@@ -117,7 +117,7 @@ div.form .errorSummary
 	border: 2px solid #C00;
 	padding: 7px 7px 12px 7px;
 	margin: 0 0 20px 0;
-	background: #eee000;
+	background: #fdffde;
 	font-size: 0.9em;
 }
 
